fix: dialog modal issues 1. nested modal closes both parent and child 2. overflow in large content 3. manage state when misc events close modal (i.e. esc key etc.) 4. nested child behind parent

--- a/src/components/atoms/modal.module.css
+++ b/src/components/atoms/modal.module.css
@@ -3,7 +3,7 @@
   max-width: calc(100vw - var(--ye-spacing-rem-normal) * 2);
   margin: auto;
   padding: var(--ye-spacing-rem-normal);
-  overflow: hidden;
+  overflow: auto;
   background: var(--ye-color-background);
   border: none;
   border-radius: var(--ye-radius-normal);
